cmake_minimum_required(VERSION 2.8)
PROJECT(FENGINE)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
MESSAGE(STATUS "This is BINARY dir " ${FENGINE_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${FENGINE_SOURCE_DIR})
MESSAGE(STATUS "This is SOURCE file " ${SRC_LIST})
ADD_LIBRARY(fengine STATIC ${SRC_LIST})
