CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE(libutils.cmake)

PROJECT(FENGINE)
AUX_SOURCE_DIRECTORY(./ SRC_LIST)
AUX_SOURCE_DIRECTORY(./lua SRC_LIST)
AUX_SOURCE_DIRECTORY(./zlib SRC_LIST)
AUX_SOURCE_DIRECTORY(./lzo SRC_LIST)
AUX_SOURCE_DIRECTORY(./expat SRC_LIST)
INCLUDE_DIRECTORIES(./)
MESSAGE(STATUS "This is FENGINE BINARY dir " ${FENGINE_BINARY_DIR})
MESSAGE(STATUS "This is FENGINE SOURCE dir " ${FENGINE_SOURCE_DIR})
MESSAGE(STATUS "This is FENGINE SOURCE file " ${SRC_LIST})
SET(CMAKE_CXX_FLAGS "-g -O0 -Wall -Werror")
ADD_DEFINITIONS(-DHAVE_EXPAT_CONFIG_H)
ADD_LIBRARY(flib STATIC ${SRC_LIST})

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
SET(STATIC_LIBS ${STATIC_LIBS} ${FENGINE_SOURCE_DIR}/../lib/libmysqlclient-64.a)
else()
SET(STATIC_LIBS ${STATIC_LIBS} ${FENGINE_SOURCE_DIR}/../lib/libmysqlclient.a)
endif()
SET(STATIC_LIBS ${STATIC_LIBS} ${FENGINE_SOURCE_DIR}/libflib.a)
MERGE_STATIC_LIBS(fengine fengine ${STATIC_LIBS})
