CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(FENGINE)
AUX_SOURCE_DIRECTORY(./ SRC_LIST)
AUX_SOURCE_DIRECTORY(./lua SRC_LIST)
AUX_SOURCE_DIRECTORY(./zlib SRC_LIST)
AUX_SOURCE_DIRECTORY(./lzo SRC_LIST)
AUX_SOURCE_DIRECTORY(./expat SRC_LIST)
AUX_SOURCE_DIRECTORY(./tinyxml SRC_LIST)
AUX_SOURCE_DIRECTORY(./sqlite SRC_LIST)
INCLUDE_DIRECTORIES(./)
LINK_DIRECTORIES(${FENGINE_SOURCE_DIR}/../lib/)
MESSAGE(STATUS "This is FENGINE BINARY dir " ${FENGINE_BINARY_DIR})
MESSAGE(STATUS "This is FENGINE SOURCE dir " ${FENGINE_SOURCE_DIR})
MESSAGE(STATUS "This is FENGINE SOURCE file " ${SRC_LIST})
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64")
ADD_DEFINITIONS(-DHAVE_EXPAT_CONFIG_H)
ADD_LIBRARY(fengine STATIC ${SRC_LIST})