CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE(libutils.cmake)

PROJECT(FENGINE)
AUX_SOURCE_DIRECTORY(../fuck_game_server_engine SRC_LIST)
AUX_SOURCE_DIRECTORY(../fuck_game_server_engine/lua SRC_LIST)
AUX_SOURCE_DIRECTORY(../fuck_game_server_engine/zlib SRC_LIST)
AUX_SOURCE_DIRECTORY(../fuck_game_server_engine/lzo SRC_LIST)
AUX_SOURCE_DIRECTORY(../fuck_game_server_engine/expat SRC_LIST)
MESSAGE(STATUS "This is BINARY dir " ${FENGINE_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${FENGINE_SOURCE_DIR})
MESSAGE(STATUS "This is SOURCE file " ${SRC_LIST})
SET(CMAKE_CXX_FLAGS "-g -O0 -Wall")
ADD_DEFINITIONS(-DHAVE_EXPAT_CONFIG_H)
ADD_LIBRARY(flib STATIC ${SRC_LIST})

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
SET(STATIC_LIBS ${STATIC_LIBS} ${FENGINE_SOURCE_DIR}/../lib/libmysqlclient-64.a)
else()
SET(STATIC_LIBS ${STATIC_LIBS} ${FENGINE_SOURCE_DIR}/../lib/libmysqlclient.a)
endif()
SET(STATIC_LIBS ${STATIC_LIBS} ${FENGINE_SOURCE_DIR}/libflib.a)
MERGE_STATIC_LIBS(fengine fengine ${STATIC_LIBS})

PROJECT(TEST)
AUX_SOURCE_DIRECTORY(../test TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(../test/compress TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(../test/ftrie TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(../test/hashmap TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(../test/inifile TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(../test/client TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(../test/server TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(../test/mysql TEST_SRC_LIST)
INCLUDE_DIRECTORIES(../fuck_game_server_engine)
MESSAGE(STATUS "This is test BINARY dir " ${TEST_BINARY_DIR})
MESSAGE(STATUS "This is test SOURCE dir " ${TEST_SOURCE_DIR})
MESSAGE(STATUS "This is test SOURCE file " ${TEST_SRC_LIST})
LINK_DIRECTORIES(${TEST_SOURCE_DIR}/)
SET(CMAKE_CXX_FLAGS "-g -O0 -Wall")
ADD_EXECUTABLE(test ${TEST_SRC_LIST})
TARGET_LINK_LIBRARIES(test fengine)

PROJECT(CMDCONTROLLER)
AUX_SOURCE_DIRECTORY(../tools/cmdcontroller CMDCONTROLLER_SRC_LIST)
INCLUDE_DIRECTORIES(../fuck_game_server_engine)
MESSAGE(STATUS "This is test BINARY dir " ${CMDCONTROLLER_BINARY_DIR})
MESSAGE(STATUS "This is test SOURCE dir " ${CMDCONTROLLER_SOURCE_DIR})
MESSAGE(STATUS "This is test SOURCE file " ${CMDCONTROLLER_SRC_LIST})
SET(CMAKE_CXX_FLAGS "-g -O0 -Wall")
LINK_DIRECTORIES(${CMDCONTROLLER_SOURCE_DIR}/)
ADD_EXECUTABLE(cmdcontroller ${CMDCONTROLLER_SRC_LIST})
TARGET_LINK_LIBRARIES(cmdcontroller fengine)
