CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(TEST)
AUX_SOURCE_DIRECTORY(./ TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(./compress TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(./ftrie TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(./hashmap TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(./inifile TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(./client TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(./server TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(./mysql TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(./fstring TEST_SRC_LIST)
AUX_SOURCE_DIRECTORY(./fpool TEST_SRC_LIST)
INCLUDE_DIRECTORIES(../fuck_game_server_engine)
MESSAGE(STATUS "This is test BINARY dir " ${TEST_BINARY_DIR})
MESSAGE(STATUS "This is test SOURCE dir " ${TEST_SOURCE_DIR})
MESSAGE(STATUS "This is test SOURCE file " ${TEST_SRC_LIST})
LINK_DIRECTORIES(${TEST_SOURCE_DIR}/../fuck_game_server_engine/)
SET(CMAKE_CXX_FLAGS "-g -O0 -Wall")
SET(EXECUTABLE_OUTPUT_PATH ${TEST_BINARY_DIR}/../bin)
ADD_EXECUTABLE(test ${TEST_SRC_LIST})
TARGET_LINK_LIBRARIES(test fengine dl pthread)
