CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(CMDCONTROLLER)
AUX_SOURCE_DIRECTORY(./ CMDCONTROLLER_SRC_LIST)
INCLUDE_DIRECTORIES(../../fuck_game_server_engine)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${CMDCONTROLLER_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${CMDCONTROLLER_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${CMDCONTROLLER_SRC_LIST})
LINK_DIRECTORIES(${CMDCONTROLLER_SOURCE_DIR}/../../fuck_game_server_engine/)
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64")
SET(EXECUTABLE_OUTPUT_PATH ${CMDCONTROLLER_BINARY_DIR}/../../bin)
ADD_EXECUTABLE(cmdcontroller ${CMDCONTROLLER_SRC_LIST})
TARGET_LINK_LIBRARIES(cmdcontroller fengine rt)
