CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(CMDCONTROLLER)
AUX_SOURCE_DIRECTORY(./ CMDCONTROLLER_SRC_LIST)
INCLUDE_DIRECTORIES(../../fakengine)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${CMDCONTROLLER_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${CMDCONTROLLER_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${CMDCONTROLLER_SRC_LIST})
LINK_DIRECTORIES(${CMDCONTROLLER_SOURCE_DIR}/../../bin/)
IF(REMOD)
SET(CMAKE_CXX_FLAGS "-g3 -O3 -Wall -Werror -gdwarf-2 -m64 -DNDEBUG")
MESSAGE("build release lib")
ELSE()
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64 -D_DEBUG")
MESSAGE("build debug lib")
ENDIF()
SET(EXECUTABLE_OUTPUT_PATH ${CMDCONTROLLER_BINARY_DIR}/../../bin)
ADD_EXECUTABLE(cmdcontroller ${CMDCONTROLLER_SRC_LIST})
TARGET_LINK_LIBRARIES(cmdcontroller fengine rt)
