CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(FPROXY)
AUX_SOURCE_DIRECTORY(./ FPROXY_SRC_LIST)
INCLUDE_DIRECTORIES(../../fakengine)
MESSAGE(STATUS "This is fproxy BINARY dir " ${FPROXY_BINARY_DIR})
MESSAGE(STATUS "This is fproxy SOURCE dir " ${FPROXY_SOURCE_DIR})
MESSAGE(STATUS "This is fproxy SOURCE file " ${FPROXY_SRC_LIST})
LINK_DIRECTORIES(${FPROXY_SOURCE_DIR}/../../bin/)
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64 -DDEBUG")
SET(EXECUTABLE_OUTPUT_PATH ${FPROXY_BINARY_DIR}/../../bin)
ADD_EXECUTABLE(fproxy ${FPROXY_SRC_LIST})
TARGET_LINK_LIBRARIES(fproxy fengine rt)
