CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(SHMCLEAN)
AUX_SOURCE_DIRECTORY(./ SHMCLEAN_SRC_LIST)
INCLUDE_DIRECTORIES(../../fuck_game_server_engine)
MESSAGE(STATUS "This is SHMCLEAN BINARY dir " ${SHMCLEAN_BINARY_DIR})
MESSAGE(STATUS "This is SHMCLEAN SOURCE dir " ${SHMCLEAN_SOURCE_DIR})
MESSAGE(STATUS "This is SHMCLEAN SOURCE file " ${SHMCLEAN_SRC_LIST})
LINK_DIRECTORIES(${SHMCLEAN_SOURCE_DIR}/../../fuck_game_server_engine/)
SET(CMAKE_CXX_FLAGS "-g -O0 -Wall -Werror")
SET(EXECUTABLE_OUTPUT_PATH ${SHMCLEAN_BINARY_DIR}/../../bin)
ADD_EXECUTABLE(shmclean ${SHMCLEAN_SRC_LIST})
TARGET_LINK_LIBRARIES(shmclean fengine rt)
